[gd_scene load_steps=2 format=2]

[ext_resource path="res://2d/gameover.gd" type="Script" id=1]

[node name="gameover" type="Node2D"]
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 266.317
margin_top = 149.292
margin_right = 522.317
margin_bottom = 170.292
text = "Congratulations! Your finished in (seconds):"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score" type="Label" parent="."]
margin_left = 302.325
margin_top = 190.683
margin_right = 480.325
margin_bottom = 232.683
text = "123123123"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 271.724
margin_top = 295.663
margin_right = 449.724
margin_bottom = 316.663
text = "Enter your Name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="LineEdit" parent="."]
margin_left = 270.926
margin_top = 323.93
margin_right = 463.926
margin_bottom = 357.93
placeholder_text = "Your name ..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 270.775
margin_top = 367.617
margin_right = 343.775
margin_bottom = 394.617
text = "Submit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="."]
margin_left = 387.483
margin_top = 367.617
margin_right = 460.483
margin_bottom = 394.617
text = "Skip"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_entered" from="TextEdit" to="." method="_on_TextEdit_text_entered"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_SkipButton_pressed"]
